--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <!--========================= Start Header Area =========================-->
     <header class="container-fluid bg-black fixed-top">
         <div class="row">
-            <a href="#" class="col-6 d-flex justify-content-center fs-5 td-none p-2 text-white">Christmas</a>
-            <nav class="col-6 d-flex justify-content-center align-items-center p-2">
+            <a href="#" class="col-6 d-flex justify-content-center fs-5 td-none p-2 text-white / col-sm-4">Christmas</a>
+            <nav class="col-6 d-flex justify-content-center align-items-center p-2 / col-sm-8 justify-content-sm-end">
                 <i class="bi bi-three-dots / mx-1 bg-white px-2 py-1"></i>
                 <i class="bi bi-search / mx-1 bg-white px-2 py-1"></i>
                 <i class="bi bi-suit-heart-fill / mx-1 bg-white px-2 py-1"></i>
@@ -40,15 +40,15 @@
 
         <!--========================= Start Section #1 Area =========================-->
         <section class="mt-5 container-fluid">
-            <div>
-                <div>
-                    <img src="./images/about-img.png" alt="img-section-1" class="img-fluid">
+            <div class="row">
+                <div class="col-10 mx-auto / col-sm-10">
+                    <img src="./images/about-img.png" alt="img-section-1" class="img-fluid / px-sm-5">
                 </div>
                 <div class="px-2 pt-3">
                     <h4 class="text-blue my-2 w-100 h-auto">why choose us?</h4>
                     <h2 class="text-white my-2">Celebrate Your Christmas With Us</h2>
                     <p class="fs-6 my-2 text-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo modi ullam temporibus quos consectetur magni ut cumque laudantium, sed, aliquam quo tempore ducimus molestias. Modi quae animi tenetur numquam repellendus.</p>
-                    <button class="w-50 fs-6 my-2 bg-blue text-white border-0">Read More</button>
+                    <button class="w-50 fs-6 my-2 bg-blue text-white border-0 py-2">Read More</button>
                 </div>
             </div>
         </section>
@@ -58,11 +58,11 @@
 
         <!--========================= Start Section #2 Area =========================-->
         <section class="mt-5 container-fluid">
-            <div class="d-flex flex-column justify-content-center">
+            <div class="d-flex flex-column justify-content-center row">
                 <h2 class="d-flex justify-content-center fs-1 mb-3"><span class="text-white">OUR <span class="text-blue">PRODUCTS</span></span></h2>
-                <div class="card d-flex bg-black">
+                <div class="card d-flex bg-black col-12 mx-auto / col-sm-10">
                     <div class="mx-5">
-                        <img src="./images/product-1.png" alt="img-section-2" class="img-fluid">
+                        <img src="./images/product-1.png" alt="img-section-2" class="img-fluid / px-sm-5">
                     </div>
                     <div class="d-flex justify-content-center">
                         <i class="bi bi-star-fill / ms-1 text-blue"></i>
@@ -74,9 +74,9 @@
                     <p class="d-flex justify-content-center text-white fs-4 my-1">Christmas Decors</p>
                     <p class="d-flex justify-content-center"><span class="text-white fs-5">$29.99 <span class="fs-6 text-gray text-decoration-line-through"">$39.99</span></span></p>
                 </div>
-                <div class="card d-flex bg-black">
+                <div class="card d-flex bg-black col-12 mx-auto / col-sm-10">
                     <div class="mx-5">
-                        <img src="./images/product-5.png" alt="img-section-2" class="img-fluid">
+                        <img src="./images/product-5.png" alt="img-section-2" class="img-fluid / px-sm-5">
                     </div>
                     <div class="d-flex justify-content-center">
                         <i class="bi bi-star-fill / ms-1 text-blue"></i>
@@ -88,9 +88,9 @@
                     <p class="d-flex justify-content-center text-white fs-4 my-1">Christmas Decors</p>
                     <p class="d-flex justify-content-center"><span class="text-white fs-5">$29.99 <span class="fs-6 text-gray text-decoration-line-through"">$39.99</span></span></p>
                 </div>
-                <div class="card d-flex bg-black">
+                <div class="card d-flex bg-black col-12 mx-auto / col-sm-10">
                     <div class="mx-5">
-                        <img src="./images/product-2.png" alt="img-section-2" class="img-fluid">
+                        <img src="./images/product-2.png" alt="img-section-2" class="img-fluid / px-sm-5">
                     </div>
                     <div class="d-flex justify-content-center">
                         <i class="bi bi-star-fill / ms-1 text-blue"></i>
@@ -102,9 +102,9 @@
                     <p class="d-flex justify-content-center text-white fs-4 my-1">Christmas Decors</p>
                     <p class="d-flex justify-content-center"><span class="text-white fs-5">$29.99 <span class="fs-6 text-gray text-decoration-line-through"">$39.99</span></span></p>
                 </div>
-                <div class="card d-flex bg-black">
+                <div class="card d-flex bg-black col-12 mx-auto / col-sm-10">
                     <div class="mx-5">
-                        <img src="./images/product-3.png" alt="img-section-2" class="img-fluid">
+                        <img src="./images/product-3.png" alt="img-section-2" class="img-fluid / px-sm-5">
                     </div>
                     <div class="d-flex justify-content-center">
                         <i class="bi bi-star-fill / ms-1 text-blue"></i>
@@ -116,9 +116,9 @@
                     <p class="d-flex justify-content-center text-white fs-4 my-1">Christmas Decors</p>
                     <p class="d-flex justify-content-center"><span class="text-white fs-5">$29.99 <span class="fs-6 text-gray text-decoration-line-through"">$39.99</span></span></p>
                 </div>
-                <div class="card d-flex bg-black">
+                <div class="card d-flex bg-black col-12 mx-auto / col-sm-10">
                     <div class="mx-5">
-                        <img src="./images/product-4.png" alt="img-section-2" class="img-fluid">
+                        <img src="./images/product-4.png" alt="img-section-2" class="img-fluid / px-sm-5">
                     </div>
                     <div class="d-flex justify-content-center">
                         <i class="bi bi-star-fill / ms-1 text-blue"></i>
@@ -138,34 +138,34 @@
 
         <!--=========================  Start Section #3 Area  =========================-->
         <section class="mt-5 container-fluid">
-            <div class="d-flex flex-column justify-content-center">
+            <div class="d-flex flex-column justify-content-center row">
                 <h2 class="d-flex justify-content-center fs-1 mb-3"><span class="text-white">OUR <span class="text-blue">PRODUCTS</span></span></h2>
-                <div class="card bg-black d-flex flex-column my-3 py-3">
+                <div class="card bg-black d-flex flex-column my-3 py-3 col-12 mx-auto / col-sm-10">
                     <i class="bi bi-asterisk / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
                     <p class="d-flex justify-content-center text-white mt-3 fs-4">Christmas Tree</p>
                     <p class="text-gray fs-6 w-75 mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum error reprehenderit ap</p>
                 </div>
-                <div class="card bg-gray d-flex flex-column my-3 py-3">
+                <div class="card bg-gray d-flex flex-column my-3 py-3 col-12 mx-auto / col-sm-10">
                     <i class="bi bi-asterisk / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
                     <p class="d-flex justify-content-center text-white mt-3 fs-4">Christmas Tree</p>
                     <p class="text-gray fs-6 w-75 mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum error reprehenderit ap</p>
                 </div>
-                <div class="card bg-black d-flex flex-column my-3 py-3">
+                <div class="card bg-black d-flex flex-column my-3 py-3 col-12 mx-auto / col-sm-10">
                     <i class="bi bi-asterisk / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
                     <p class="d-flex justify-content-center text-white mt-3 fs-4">Christmas Tree</p>
                     <p class="text-gray fs-6 w-75 mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum error reprehenderit ap</p>
                 </div>
-                <div class="card bg-gray d-flex flex-column my-3 py-3">
+                <div class="card bg-gray d-flex flex-column my-3 py-3 col-12 mx-auto / col-sm-10">
                     <i class="bi bi-asterisk / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
                     <p class="d-flex justify-content-center text-white mt-3 fs-4">Christmas Tree</p>
                     <p class="text-gray fs-6 w-75 mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum error reprehenderit ap</p>
                 </div>
-                <div class="card bg-black d-flex flex-column my-3 py-3">
+                <div class="card bg-black d-flex flex-column my-3 py-3 col-12 mx-auto / col-sm-10">
                     <i class="bi bi-asterisk / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
                     <p class="d-flex justify-content-center text-white mt-3 fs-4">Christmas Tree</p>
                     <p class="text-gray fs-6 w-75 mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum error reprehenderit ap</p>
                 </div>
-                <div class="card bg-gray d-flex flex-column my-3 py-3">
+                <div class="card bg-gray d-flex flex-column my-3 py-3 col-12 mx-auto / col-sm-10">
                     <i class="bi bi-asterisk / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
                     <p class="d-flex justify-content-center text-white mt-3 fs-4">Christmas Tree</p>
                     <p class="text-gray fs-6 w-75 mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum error reprehenderit ap</p>
@@ -178,9 +178,9 @@
 
         <!--========================= Start Section #4 Area =========================-->
         <section class="mt-5 container-fluid">
-            <div class="d-flex flex-column justify-content-center">
+            <div class="d-flex flex-column justify-content-center row">
                 <h2 class="d-flex justify-content-center fs-1 mb-3"><span class="text-white">OUR <span class="text-blue">GALLERY</span></span></h2>
-                <div class="card bg-black d-flex flex-column my-3">
+                <div class="card bg-black d-flex flex-column my-3 col-12 mx-auto / col-sm-10">
                     <img src="./images/g-img-1.jpg" alt="img-section-4" class="img-fluid my-3">
                     <img src="./images/g-img-2.jpg" alt="img-section-4" class="img-fluid my-3">
                     <img src="./images/g-img-3.jpg" alt="img-section-4" class="img-fluid my-3">
@@ -199,9 +199,9 @@
 
         <!--========================= Start Section #5 Area =========================-->
         <section class="mt-5 container-fluid">
-            <div class="d-flex flex-column justify-content-center">
+            <div class="d-flex flex-column justify-content-center row">
                 <h2 class="d-flex justify-content-center fs-1 mb-3"><span class="text-white">CONTACT <span class="text-blue">US</span></span></h2>
-                <form class="d-flex flex-column">
+                <form class="d-flex flex-column col-12 mx-auto / col-sm-10">
                     <div class="form-floating mb-4">
                         <input type="email" class="form-control bg-black text-white border-gray" id="floatingInput" placeholder="name@example.com">
                         <label for="floatingInput">Email address</label>
@@ -228,10 +228,10 @@
 
         <!--========================= Start Section #6 Area =========================-->
         <section class="mt-5 container-fluid">
-            <div class="d-flex flex-column justify-content-center">
+            <div class="d-flex flex-column justify-content-center row">
                 <h2 class="d-flex justify-content-center fs-1 mb-3"><span class="text-white">OUR DAILY <span class="text-blue">BLOGS</span></span></h2>
-                <div class="d-flex justify-content-center align-items-center flex-column">
-                    <div class="card bg-dark my-2" style="width: 18rem;">
+                <div class="d-flex justify-content-center align-items-center flex-column col-12">
+                    <div class="card bg-dark my-2 col-12 / col-sm-10">
                         <img src="./images/blog-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title text-white">Blog Title Goes Here</h5>
@@ -249,7 +249,7 @@
                           </div>
                         </div>
                     </div>
-                    <div class="card bg-dark my-2" style="width: 18rem;">
+                    <div class="card bg-dark my-2 col-12 / col-sm-10">
                         <img src="./images/blog-2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title text-white">Blog Title Goes Here</h5>
@@ -267,7 +267,7 @@
                         </div>
                         </div>
                     </div>
-                    <div class="card bg-dark my-2" style="width: 18rem;">
+                    <div class="card bg-dark my-2 col-12 / col-sm-10">
                         <img src="./images/blog-3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title text-white">Blog Title Goes Here</h5>
@@ -380,12 +380,14 @@
                 <p class="ms-1 text-gray">buenos aires, argentina</p>
             </a>
         </div>
-        <div class="my-3 border-bottom border-primary pb-2">
+        <div class="my-3 pb-2 row">
             <h4 class="text-white my-3">Newsletter</h4>
-            <div class="my-3">
+            <div class="my-3 col-8">
                 <input type="email" class="form-control / bg-black border-blue" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="enter your email">
             </div>
-            <button class="w-50 fs-6 py-2 bg-blue text-white border-0 my-2">Subscribe</button>
+            <div class="col-8 / col-sm-6">
+                <button class="w-50 fs-6 py-2 bg-blue text-white border-0 my-2">Subscribe</button>
+            </div>
             <div class="my-3">
                 <i class="bi bi-facebook / bg-white text-black py-1 px-2"></i>
                 <i class="bi bi-twitter / bg-white text-black py-1 px-2"></i>
@@ -393,7 +395,7 @@
                 <i class="bi bi-instagram / bg-white text-black py-1 px-2"></i>
             </div>
         </div>
-        <p class="d-flex justify-content-center"><span class="text-white">created by <span class="text-blue">Tomas Aranda</span></span></p>
+        <p class="d-flex justify-content-center border-top border-primary pt-3"><span class="text-white">created by <span class="text-blue">Tomas Aranda</span></span></p>
     </footer>
     <!--========================= End Footer Area =========================-->
 
