--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     <link rel="stylesheet" href="./assets/css/scss/main.css">
 
     <!-- Bootstrap Icons File -->
-    <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+
+    <!-- Aos File -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <!-- Fontawasome Icons File -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 
 <body class="bg-black">
@@ -23,13 +28,13 @@
         <div class="row">
             <a href="#" class="col-6 d-flex justify-content-center fs-5 td-none p-2 text-white / col-sm-4 / col-lg-2">Christmas</a>
             <div class="d-none col-8 justify-content-center align-items-center / d-lg-flex">
-                <a href="#" class="td-none mx-2 text-white fs-5">home</a>
-                <a href="#" class="td-none mx-2 text-white fs-5">about</a>
-                <a href="#" class="td-none mx-2 text-white fs-5">products</a>
-                <a href="#" class="td-none mx-2 text-white fs-5">services</a>
-                <a href="#" class="td-none mx-2 text-white fs-5">gallery</a>
-                <a href="#" class="td-none mx-2 text-white fs-5">contact</a>
-                <a href="#" class="td-none mx-2 text-white fs-5">blogs</a>
+                <a href="#" class="td-none mx-2 fs-5 text-white / mx-lg-3">Home</a>
+                <a href="#" class="td-none mx-2 fs-5 text-white / mx-lg-3">About</a>
+                <a href="#" class="td-none mx-2 fs-5 text-white / mx-lg-3">Products</a>
+                <a href="#" class="td-none mx-2 fs-5 text-white / mx-lg-3">Services</a>
+                <a href="#" class="td-none mx-2 fs-5 text-white / mx-lg-3">Gallery</a>
+                <a href="#" class="td-none mx-2 fs-5 text-white / mx-lg-3">Contact</a>
+                <a href="#" class="td-none mx-2 fs-5 text-white / mx-lg-3">Blogs</a>
             </div>
             <nav class="col-6 d-flex justify-content-center align-items-center p-2 / col-sm-8 justify-content-sm-end / col-lg-2">
                 <i class="bi bi-three-dots / mx-1 bg-white px-2 py-1 / d-lg-none"></i>
@@ -53,10 +58,10 @@
                     <img src="./images/about-img.png" alt="img-section-1" class="img-fluid / px-sm-5">
                 </div>
                 <div class="px-2 pt-3 justify-content-center flex-column / col-lg-6 d-lg-flex" data-aos="fade-left" data-aos-delay="350">
-                    <h4 class="text-blue py-2 w-100 h-auto">why choose us?</h4>
+                    <h4 class="text-primary py-2 w-100 h-auto">why choose us?</h4>
                     <h2 class="text-white py-2">Celebrate Your Christmas With Us</h2>
                     <p class="fs-6 py-2 text-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo modi ullam temporibus quos consectetur magni ut cumque laudantium, sed, aliquam quo tempore ducimus molestias. Modi quae animi tenetur numquam repellendus.</p>
-                    <button class="w-50 fs-6 my-2 bg-blue text-white border-0 py-2">Read More</button>
+                    <button class="w-50 fs-6 my-2 text-white border-0 py-2 btn btn-primary bg-blue">Read More</button>
                 </div>
             </div>
         </section>
@@ -162,33 +167,33 @@
         <section class="container-fluid mt-5">
             <div class="d-flex flex-column justify-content-center row / flex-md-row justify-content-md-evenly">
                 <h2 class="d-flex justify-content-center fs-1 mb-3"><span class="text-white">OUR <span class="text-blue">PRODUCTS</span></span></h2>
-                <div class="card bg-black d-flex flex-column my-3 py-3 col-12 mx-auto / col-sm-10 / col-md-5 mx-md-0 / col-lg-4" data-aos="fade-up" data-aos-delay="150">
+                <div class="card bg-black d-flex flex-column my-3 py-3 col-12 mx-auto cards / col-sm-10 / col-md-5 mx-md-0 / col-lg-4" data-aos="fade-up" data-aos-delay="150">
+                    <i class="fas fa-candy-cane / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
+                    <p class="d-flex justify-content-center text-white mt-3 fs-4">Christmas Tree</p>
+                    <p class="text-gray fs-6 w-75 mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum error reprehenderit ap</p>
+                </div>
+                <div class="card bg-gray d-flex flex-column my-3 py-3 col-12 mx-auto cards / col-sm-10 / col-md-5 mx-md-0 / col-lg-4" data-aos="fade-up" data-aos-delay="350">
+                    <i class="fas fa-holly-berry / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
+                    <p class="d-flex justify-content-center text-white mt-3 fs-4">Christmas Tree</p>
+                    <p class="text-gray fs-6 w-75 mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum error reprehenderit ap</p>
+                </div>
+                <div class="card bg-black d-flex flex-column my-3 py-3 col-12 mx-auto cards / col-sm-10 / col-md-5 mx-md-0 / col-lg-4" data-aos="fade-up" data-aos-delay="450">
+                    <i class="fas fa-sleigh / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
+                    <p class="d-flex justify-content-center text-white mt-3 fs-4">Christmas Tree</p>
+                    <p class="text-gray fs-6 w-75 mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum error reprehenderit ap</p>
+                </div>
+                <div class="card bg-gray d-flex flex-column my-3 py-3 col-12 mx-auto cards / col-sm-10 / col-md-5 mx-md-0 / col-lg-4" data-aos="fade-up" data-aos-delay="650">
+                    <i class="fas fa-gift / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
+                    <p class="d-flex justify-content-center text-white mt-3 fs-4">Christmas Tree</p>
+                    <p class="text-gray fs-6 w-75 mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum error reprehenderit ap</p>
+                </div>
+                <div class="card bg-black d-flex flex-column my-3 py-3 col-12 mx-auto cards / col-sm-10 / col-md-5 mx-md-0 / col-lg-4" data-aos="fade-up" data-aos-delay="750">
                     <i class="bi bi-asterisk / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
                     <p class="d-flex justify-content-center text-white mt-3 fs-4">Christmas Tree</p>
                     <p class="text-gray fs-6 w-75 mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum error reprehenderit ap</p>
                 </div>
-                <div class="card bg-gray d-flex flex-column my-3 py-3 col-12 mx-auto / col-sm-10 / col-md-5 mx-md-0 / col-lg-4" data-aos="fade-up" data-aos-delay="350">
-                    <i class="bi bi-asterisk / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
-                    <p class="d-flex justify-content-center text-white mt-3 fs-4">Christmas Tree</p>
-                    <p class="text-gray fs-6 w-75 mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum error reprehenderit ap</p>
-                </div>
-                <div class="card bg-black d-flex flex-column my-3 py-3 col-12 mx-auto / col-sm-10 / col-md-5 mx-md-0 / col-lg-4" data-aos="fade-up" data-aos-delay="450">
-                    <i class="bi bi-asterisk / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
-                    <p class="d-flex justify-content-center text-white mt-3 fs-4">Christmas Tree</p>
-                    <p class="text-gray fs-6 w-75 mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum error reprehenderit ap</p>
-                </div>
-                <div class="card bg-gray d-flex flex-column my-3 py-3 col-12 mx-auto / col-sm-10 / col-md-5 mx-md-0 / col-lg-4" data-aos="fade-up" data-aos-delay="650">
-                    <i class="bi bi-asterisk / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
-                    <p class="d-flex justify-content-center text-white mt-3 fs-4">Christmas Tree</p>
-                    <p class="text-gray fs-6 w-75 mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum error reprehenderit ap</p>
-                </div>
-                <div class="card bg-black d-flex flex-column my-3 py-3 col-12 mx-auto / col-sm-10 / col-md-5 mx-md-0 / col-lg-4" data-aos="fade-up" data-aos-delay="750">
-                    <i class="bi bi-asterisk / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
-                    <p class="d-flex justify-content-center text-white mt-3 fs-4">Christmas Tree</p>
-                    <p class="text-gray fs-6 w-75 mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum error reprehenderit ap</p>
-                </div>
-                <div class="card bg-gray d-flex flex-column my-3 py-3 col-12 mx-auto / col-sm-10 / col-md-5 mx-md-0 / col-lg-4" data-aos="fade-up" data-aos-delay="900">
-                    <i class="bi bi-asterisk / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
+                <div class="card bg-gray d-flex flex-column my-3 py-3 col-12 mx-auto cards / col-sm-10 / col-md-5 mx-md-0 / col-lg-4" data-aos="fade-up" data-aos-delay="900">
+                    <i class="fas fa-gifts / justify-content-center d-flex fs-1 text-white bg-blue rounded-circle w-min-content mx-auto p-3"></i>
                     <p class="d-flex justify-content-center text-white mt-3 fs-4">Christmas Tree</p>
                     <p class="text-gray fs-6 w-75 mx-auto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum error reprehenderit ap</p>
                 </div>
@@ -221,27 +226,27 @@
 
 
         <!--========================= Start Section #5 Area =========================-->
-        <section class="container-fluid mt-5">
+        <section class="container-fluid mt-5 py-5">
             <div class="d-flex flex-column justify-content-center row">
                 <h2 class="d-flex justify-content-center fs-1 mb-3"><span class="text-white">CONTACT <span class="text-blue">US</span></span></h2>
                 <form class="d-flex flex-column col-12 mx-auto / col-sm-10 / col-md-6">
-                    <div class="form-floating mb-4" data-aos="fade-up" data-aos-delay="150">
-                        <input type="email" class="form-control bg-black text-white border-gray" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">full name</label>
+                    <div class="form-floating mb-5" data-aos="fade-up" data-aos-delay="150">
+                        <input type="email" class="form-control bg-black text-white border-start-0 border-end-0 border-top-0 border-primary" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput" class="text-white">full name</label>
                     </div>
-                    <div class="form-floating mb-4" data-aos="fade-up" data-aos-delay="350">
-                        <input type="email" class="form-control bg-black text-white border-gray" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">email</label>
+                    <div class="form-floating mb-5" data-aos="fade-up" data-aos-delay="350">
+                        <input type="email" class="form-control bg-black text-white border-gray border-start-0 border-end-0 border-top-0 border-primary" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput" class="text-white">email</label>
                     </div>
-                    <div class="form-floating mb-4" data-aos="fade-up" data-aos-delay="450">
-                        <input type="email" class="form-control bg-black text-white border-gray" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">phone</label>
+                    <div class="form-floating mb-5" data-aos="fade-up" data-aos-delay="450">
+                        <input type="email" class="form-control bg-black text-white border-gray border-start-0 border-end-0 border-top-0 border-primary" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput" class="text-white">phone</label>
                     </div>
                     <div class="form-floating mb-4" data-aos="fade-up" data-aos-delay="550">
-                        <textarea class="form-control bg-black text-white border-gray" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-                        <label for="floatingTextarea2">Comments</label>
+                        <textarea class="form-control bg-black text-white border-gray border-start-0 border-end-0 border-top-0 border-primary" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                        <label for="floatingTextarea2" class="text-white">Comments</label>
                       </div>
-                    <button class="w-50 fs-6 my-2 bg-blue text-white border-0 mx-auto text-white p-2" data-aos="fade-up" data-aos-delay="550">Send Now</button>
+                    <button class="w-50 fs-6 mt-5 text-white border-0 mx-auto text-white p-2 btn btn-primary bg-blue" data-aos="fade-up" data-aos-delay="550">Send Now</button>
                 </form>
             </div>
         </section>
@@ -252,10 +257,10 @@
         <!--========================= Start Section #6 Area =========================-->
         <section class="container-fluid mt-5 mb-2">
             <div class="d-flex flex-column justify-content-center row-cols-auto">
-                <h2 class="d-flex justify-content-center fs-1 mb-3"><span class="text-white">OUR DAILY <span class="text-blue">BLOGS</span></span></h2>
-                <div class="d-flex justify-content-center align-items-center flex-column / flex-lg-row justify-content-lg-evenly">
+                <h2 class="d-flex justify-content-center fs-1 mb-5"><span class="text-white">OUR DAILY <span class="text-blue">BLOGS</span></span></h2>
+                <div class="d-flex justify-content-center align-items-center flex-column / flex-lg-row justify-content-lg-evenly my-lg-5">
                     <div class="card bg-dark my-2 col-12 / col-sm-10 / col-md-7 / col-lg-3" data-aos="fade-up" data-aos-delay="150">
-                        <img src="./images/blog-1.jpg" class="card-img-top" alt="img-section-6">
+                        <img src="./images/blog-1.jpg" class="card-img-top hover-zoom" alt="img-section-6">
                         <div class="card-body">
                           <h5 class="card-title text-white">Blog Title Goes Here</h5>
                           <p class="card-text text-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, nihil! Laborum</p>
@@ -320,7 +325,7 @@
 
 
     <!--========================= Start Footer Area =========================-->
-    <footer class="bg-black container-fluid mt-5 d-flex flex-column / row-md flex-md-row flex-md-wrap justify-content-md-center">
+    <footer class="bg-black container-fluid mt-5 d-flex flex-column my-5 / row-md flex-md-row flex-md-wrap justify-content-md-center mt-lg-5">
         <div class="my-2 / col-md-3" data-aos="fade-up" data-aos-delay="150">
             <h4 class="text-white">Quick Links</h4>
             <a href="#" class="d-flex td-none">
@@ -417,18 +422,35 @@
                 <i class="bi bi-instagram / bg-white text-black py-1 px-2"></i>
             </div>
         </div>
-        <p class="d-flex justify-content-center border-top border-primary pt-3 col-11 mx-md-auto"><span class="text-white">created by <span class="text-blue">Tomas Aranda</span></span></p>
     </footer>
     <!--========================= End Footer Area =========================-->
 
 
+<!-- Aos JS File -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="./assets/js/script.js"></script>
-<script>
 
+<!-- Tilt JS File -->
+<script type="text/javascript" src="./assets/js/vanilla-tilt.js"></script>
+
+<!-- JS File -->
+<script src="./assets/js/script.js"></script>
+
+<!-- Config JS Aos Duration Scrollbar -->
+<script>
     AOS.init({
         duration: 600,
     });
 </script>
+
+<!-- Config JS Tilt -->
+<script>
+    VanillaTilt.init(document.querySelectorAll(".cards"), {
+        max: 25,
+        speed: 400,
+        glare: true,
+        "max-glare": 1,
+    });
+</script>
+
 </body>
 </html>
